fix register button on mobile

--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -2843,3 +2843,10 @@ body.layout-2 .sidebar-wrapper .main-sidebar .sidebar-menu li.menu-header {
 .main-content-inner {
   padding: 16px;
 }
+
+.register-afz {
+  padding-right: 16px;
+  @media (max-width: 1024px) {
+    padding-right: 0;
+  }
+}
